@@ -20,19 +20,31 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>23</java.version>
         <helidon.version>4.1.1</helidon.version>
-        <swagger-maven-plugin-version>3.1.0</swagger-maven-plugin-version>
 
-        <jlama.version>0.3.1</jlama.version>
+        <swagger-maven-plugin.version>2.2.25</swagger-maven-plugin.version>
+
         <jackson.version>2.17.2</jackson.version>
         <langchain4j.version>0.34.0</langchain4j.version>
         <h2.version>2.3.232</h2.version>
         <junit.version>5.11.0</junit.version>
 
-        <jetty-version>9.0.7.v20131107</jetty-version>
-        <jersey2-version>2.4.1</jersey2-version>
-        <logback-version>1.0.1</logback-version>
-    </properties>
+        <logback.version>1.4.14</logback.version>
 
+        <swagger.version>2.2.24</swagger.version>
+        <javax.ws.rs.version>2.1</javax.ws.rs.version>
+        <javax.servelet.version>3.1.0</javax.servelet.version>
+        <javax.xml.bind.version>2.1</javax.xml.bind.version>
+        <io.smallrye.version>3.13.0</io.smallrye.version>
+
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>3.5.1</maven.surefire.plugin.version>
+        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
+
+        <node.version>v22.8.0</node.version>
+        <npm.version>10.8.2</npm.version>
+
+        <exec.maven.plugin.version>3.5.0</exec.maven.plugin.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -76,7 +88,6 @@
             <version>${helidon.version}</version>
         </dependency>
 
-        <!--    SUJET  -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -111,21 +122,9 @@
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-jlama</artifactId>
-            <version>${langchain4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-ollama</artifactId>
             <version>${langchain4j.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.tjake</groupId>
-            <artifactId>jlama-native</artifactId>
-            <classifier>${os.detected.classifier}</classifier>
-            <version>${jlama.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>io.helidon.dbclient</groupId>
             <artifactId>helidon-dbclient</artifactId>
@@ -151,43 +150,34 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-jaxrs2</artifactId>
-            <version>2.2.24</version>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1</version>
+            <version>${javax.ws.rs.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${javax.servelet.version}</version>
         </dependency>
-
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.1</version>
+            <version>${javax.xml.bind.version}</version>
         </dependency>
         <!-- end of openapi doc -->
 
-        <!--        AUTRE-->
         <dependency>
             <groupId>io.helidon.logging</groupId>
             <artifactId>helidon-logging-slf4j</artifactId>
             <version>${helidon.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-api</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>jul-to-slf4j</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
 
         <dependency>
@@ -199,54 +189,40 @@
         <dependency>
             <groupId>io.helidon.webserver</groupId>
             <artifactId>helidon-webserver-access-log</artifactId>
+            <version>${helidon.version}</version>
         </dependency>
 
         <!-- openAPI ui dependencies -->
         <dependency>
             <groupId>io.helidon.integrations.openapi-ui</groupId>
             <artifactId>helidon-integrations-openapi-ui</artifactId>
+            <version>${helidon.version}</version>
         </dependency>
         <dependency>
             <groupId>io.smallrye</groupId>
             <artifactId>smallrye-open-api-ui</artifactId>
+            <version>${io.smallrye.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.helidon.openapi</groupId>
             <artifactId>helidon-openapi</artifactId>
+            <version>${helidon.version}</version>
         </dependency>
         <!-- end of openAPI ui dependencies -->
     </dependencies>
 
     <build>
-        <extensions>
-            <extension>
-                <groupId>kr.motd.maven</groupId>
-                <artifactId>os-maven-plugin</artifactId>
-                <version>1.7.0</version>
-            </extension>
-        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>${exec.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>java</goal>
                         </goals>
-                        <id>all</id>
-                        <configuration>
-                            <arguments>
-                                <argument>--add-modules=jdk.incubator.vector</argument>
-                                <argument>--enable-native-access=ALL-UNNAMED</argument>
-                                <argument>--enable-preview</argument>
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>${mainClass}</argument>
-                            </arguments>
-                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
@@ -257,11 +233,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <release>${java.version}</release>
                     <compilerArgs>
-                        <!--                        <arg>&#45;&#45;enable-preview</arg>-->
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>-Xlint:all</arg>
                     </compilerArgs>
                 </configuration>
@@ -269,16 +245,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>${maven.surefire.plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.15.0</version>
+                <version>${frontend-maven-plugin.version}</version>
                 <configuration>
                     <workingDirectory>src/frontend</workingDirectory>
-                    <nodeVersion>v22.8.0</nodeVersion>
-                    <npmVersion>10.8.2</npmVersion>
+                    <nodeVersion>${node.version}</nodeVersion>
+                    <npmVersion>${npm.version}</npmVersion>
                     <environmentVariables>
                         <FRONT_OUTPUT_DIR>${project.build.outputDirectory}/static</FRONT_OUTPUT_DIR>
                         <BACKEND_URL>http://localhost:8080</BACKEND_URL>
@@ -311,31 +287,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-frontend</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.outputDirectory}/public</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/frontend/dist</directory>
-                                    <includes>
-                                        <include>**/*</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -350,7 +301,7 @@
             <plugin>
                 <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
-                <version>2.2.24</version>
+                <version>${swagger-maven-plugin.version}</version>
                 <configuration>
                     <outputFileName>openapi</outputFileName>
                     <outputPath>src/main/resources/swagger-ui</outputPath>
